--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ['jaxmarl*']
+include = ['jaxmarl*', 'baselines', 'tests', 'data']
 
 [tool.setuptools.dynamic]
 version = {attr = "jaxmarl.__version__"}
