--- a/baselines/IPPO/config/mer_ff_window_overcooked.yaml
+++ b/baselines/IPPO/config/mer_ff_window_overcooked.yaml
@@ -1,7 +1,7 @@
 "LR": 2.5e-4
 "NUM_PARTICLES": 4
 "NUM_COPOLICIES": 10
-"NUM_ENVS": 16
+"NUM_ENVS": 2
 "NUM_STEPS": 128
 "TOTAL_TIMESTEPS": 5e6
 "UPDATE_EPOCHS": 4
@@ -9,13 +9,15 @@
 "GAMMA": 0.99
 "GAE_LAMBDA": 0.95
 "CLIP_EPS": 0.2
-"ENT_COEF": 0.01
+"ENT_COEF": 0.05
 "VF_COEF": 0.5
 "MAX_GRAD_NORM": 0.5
 "ACTIVATION": "tanh"
 "ENV_NAME": "overcooked"
 "ENV_KWARGS": 
-  "layout" : "cramped_room"
+  "layout" : "coord_ring"
 "OBS_DELAY" : 2
+"COPARAMS_SOURCE" : "file"
+"COPARAMS_FILE" : "overcooked_coord_ring_obsDelay2_save_params25.pkl"
 "MATCHING": "multi_scaled"
 "ANNEAL_LR": True
